--- a/admin/footer.html
+++ b/admin/footer.html
@@ -7,7 +7,7 @@
             <div class="col-xs-12">
                 Copyright 2019 © <a href="https://hfish.io" target="_blank">HFish</a> - <a
                     href="https://hack.lc"
-                    target="_blank">HackLC</a>
+                    target="_blank">吉林祥云-蜜罐</a>
             </div>
         </div>
     </div>
