--- a/admin/footer.html
+++ b/admin/footer.html
@@ -5,9 +5,9 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                Copyright 2019 © <a href="https://hfish.io" target="_blank">HFish</a> - <a
+                Copyright 2019 © <a href="https://hfish.io" target="_blank">吉林祥云</a> - <a
                     href="https://hack.lc"
-                    target="_blank">吉林祥云-蜜罐</a>
+                    target="_blank">蜜罐</a>
             </div>
         </div>
     </div>
